# fastapi-tourclub-website-backend

./: .env.example  .gitignore  Dockerfile  NOTICE.md  README.md  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py
api/v1/: additional.py  application.py  article.py  auth.py  club_participant.py  files.py  hike.py  hike_participant.py  news.py  passage.py  statistics.py  user.py
api/v1/archive/: additional.py  hike.py  hike_participant.py  passage.py
api/v1/user/: auth.py  club_participant.py  user.py
core/: config.py  security.py  utils.py
crud/: __init__.py  additional.py  application.py  articles.py  hikes.py  news.py  participants.py  passes.py  statistics.py  tokens.py  users.py
db/: __init__.py  engine.py  session.py
enums/: __init__.py  status.py
models/: __init__.py  applications.py  articles.py  associations.py  base.py  hikes.py  news.py  participants.py  passes.py  tokens.py  users.py
schemas/: __init__.py  applications.py  articles.py  hikes.py  news.py  participants.py  passes.py  response.py  statistics.py  users.py
services/: __init__.py  email.py  s3.py
templates/email/: application_email.html  verify_email.html  verify_email_updated.html
