[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "qellyka",email = "qellyka@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi[standart] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gpxpy (>=1.6.2,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiobotocore (>=2.24.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

